--- a/rest-validation-3.1/README
+++ b/rest-validation-3.1/README
@@ -1,7 +1,7 @@
 This is an example application of my blog post:
 
-Spring from the Trenches: Adding Validation to a REST API - Not published yet.
-
+Spring from the Trenches: Adding Validation to a REST API
+http://www.petrikainulainen.net/programming/spring-framework/spring-from-the-trenches-adding-validation-to-a-rest-api/
 
 RUNNING THE APPLICATION:
 
