--- a/protected-method-scheduled-job/spring-sec-32/README
+++ b/protected-method-scheduled-job/spring-sec-32/README
@@ -1,8 +1,10 @@
 This is an example application of my blog post:
 
-Spring from the Trenches: Invoking a Protected Method From a Scheduled Job
+Spring from the Trenches: Invoking a Secured Method From a Scheduled Job
 
 TBD.
+
+NOTE: The XML configuration is not working at the moment.
 
 RUNNING THE APPLICATION:
 
