Update blog post titles

--- a/protected-method-scheduled-job/spring-sec-31/README
+++ b/protected-method-scheduled-job/spring-sec-31/README
@@ -1,6 +1,6 @@
 This is an example application of my blog post:
 
-Spring from the Trenches: Invoking a Secured Method From a Scheduled Job
+Spring From the Trenches: Invoking a Secured Method From a Scheduled Job
 
 http://www.petrikainulainen.net/programming/spring-framework/spring-from-the-trenches-invoking-a-secured-method-from-a-scheduled-job/
 
